# server-modpack-manager

./: .env  Cargo.toml  README.md  originalifes4.nsi
src/: cli.rs  main.rs  utils.rs
