[package]
name = "server-modpack-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
indicatif = "0.17.8"
octocrab = "0.39.0"
regex = "1.11.1"
reqwest = "0.12.7"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = "0.3.37"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.2.0"
