[package]
name = "server-modpack-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.39"
crossterm = "0.28.1"
dotenvy_macro = "0.15.7"
indicatif = "0.17.8"
octocrab = "0.42.1"
regex = "1.11.1"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.2.0"
theseus = { git = "https://github.com/modrinth/code" }
